k8s/_examples/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  labels:
    app.kubernetes.io/name: myapp
    app.kubernetes.io/component: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: myapp
      app.kubernetes.io/component: web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: myapp
        app.kubernetes.io/component: web
    spec:
      containers:
        - name: web
          image: myapp:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 48090
              name: http
