k8s/_examples/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp
spec:
  rules:
    - http:
        host: localhost
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: myapp
                port:
                  number: 9000
